2009-02-20  Martin Leidig  <mleidig@schlund.de>

	Fixed browser reload problem: reloading a page used in multiple flows
	could cause the selection of the wrong pageflow if the URL doesn't
	contain a __lf parameter indicating the right flow. URLs don't contain
	the __lf parameter if they're created by a redirect (for forcing SSL
	or getting the page name into the URL). Fixed the problem by adding
	the __lf parameter from the originating URL to the redirection URL.
	* src/org/pustefixframework/http/PustefixContextXMLRequestHandler.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java

2009-02-19  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/resources/ResourceUtil.java: escape '{' 
	and '}' in URIs to support paths containing '{$product}'

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java:
	Fixed authorization exceptions and NPEs for unconfigured pages

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: set module
	from parent if none is specified for dynamic includes from within
	modules
	* src/de/schlund/pfixxml/resources/ModuleResource.java: disable
	caching on all JarURLConnections

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: added support for deployment via WebDAV and use it
	as default, added support for deploying releases and snapshots to
	different locations (can be set using the build.properties
	remote.repository.url.releases and remote.repository.url.snapshots)

2009-02-16  Martin Leidig  <mleidig@schlund.de>

	Added support for including XML, XSL and images from modules by
	extending the resource resolution mechanism.

	Added:
	* src/de/schlund/pfixcore/util/ModuleInfo.java
	* src/de/schlund/pfixcore/util/ModuleDescriptor.java
	* src/de/schlund/pfixxml/resources/ResourceProvider.java
	* src/de/schlund/pfixxml/resources/DynamicResourceProvider.java